--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.11.0",
     "next": "10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.11.0",
+    "@types/node": "^14.14.9",
+    "@types/react": "^16.14.0",
+    "typescript": "^4.1.2"
   }
 }
